Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-16736

RotationAnimation animation whose alwaysRunToEnd property is true gets stuck if started too often

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.7.4
    • 4.7.1
    • None
    • Windows XP Professional (Version 2002, Service Pack 3)
    • b254be20c03d4dbfc1803cd40dc95d52115b955c

       

      Consider the following QML code:

      Image {
      id: icon
      ...
      RotationAnimation on rotation

      { id: animation .... alwaysRunToEnd: false loops: Animation.Infinite running: false }

      MouseArea {
      anchors.fill: parent
      onClicked:

      { animation.running = !animation.running; console.log(animation.running); }

      }
      }

      If alwaysRunToEnd property is true and the image is clicked repeatedly, the animation gets stuck and runs forever. Also, the messages printed to the console show that the running property gets stuck to false. On the other hand, if alwaysRunToEnd is false, there is no such problem. See the attached code for an example.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            brasser Michael Brasser (closed Nokia identity) (Inactive)
            phn P-H Niemenlehto
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes