Fix animations with alwaysRunToEnd that are frequently stopped/started.

A previous refactoring of the animation logic introduced a regression
-- 'restart' rather than 'continue' behavior.

Change-Id: I8ade2286298fad48f5e268793a0b2571884bc5d0
Task-number: QTBUG-16736
Reviewed-by: Martin Jones