tests/auto/declarative/qdeclarativeanimations/tst_qdeclarativeanimations.cpp
@@ -87,6 +87,7 @@ private slots:
     void nonTransitionBug();
     void registrationBug();
     void doubleRegistrationBug();
+    void alwaysRunToEndRestartBug();
 };
 
 #define QTIMED_COMPARE(lhs, rhs) do { \
@@ -817,6 +818,30 @@ void tst_qdeclarativeanimations::doubleRegistrationBug()
     QDeclarativeAbstractAnimation *anim = rect->findChild<QDeclarativeAbstractAnimation*>("animation");
     QVERIFY(anim != 0);
     QTRY_COMPARE(anim->qtAnimation()->state(), QAbstractAnimation::Stopped);
+}
+
+//QTBUG-16736
+void tst_qdeclarativeanimations::alwaysRunToEndRestartBug()
+{
+    QDeclarativeRectangle rect;
+    QDeclarativePropertyAnimation animation;
+    animation.setTarget(&rect);
+    animation.setProperty("x");
+    animation.setTo(200);
+    animation.setDuration(1000);
+    animation.setLoops(-1);
+    animation.setAlwaysRunToEnd(true);
+    QVERIFY(animation.loops() == -1);
+    QVERIFY(animation.alwaysRunToEnd() == true);
+    animation.start();
+    animation.stop();
+    animation.start();
+    animation.stop();
+    QTest::qWait(500);
+    QVERIFY(rect.x() != qreal(200));
+    QTest::qWait(800);
+    QTIMED_COMPARE(rect.x(), qreal(200));
+    QCOMPARE(static_cast<QDeclarativeAbstractAnimation*>(&animation)->qtAnimation()->state(), QAbstractAnimation::Stopped);
 }
 
 QTEST_MAIN(tst_qdeclarativeanimations)
